@@ -5,8 +5,9 @@ from datetime import datetime
 from django.conf import settings
 from django.template import loader, RequestContext
 from django.http import HttpResponse
-from django.utils import simplejson as json
 from django.utils.http import http_date
+
+from handy.cross import json
 
 
 def template_guess(func):
