@@ -1,3 +1,5 @@
+- don't use django.utils.simplejson in Django 1.5 since it's deprecated
+
 0.2.3
 - close cursor in db utilities
 - fixed @cached_property (hackprime),
